@@ -2,10 +2,24 @@
 # This is an example configuration file for the Ruby DFP API client library.
 # Please fill in the required fields, and copy it over to your home directory.
 :authentication:
-  # Authentication method, methods currently supported: OAuth, ClientLogin.
+  # Authentication method, methods currently supported:
+  # OAuth2, OAuth, ClientLogin.
   :method: ClientLogin
 
-  # Auth parameters for OAuth method.
+  # Auth parameters for OAuth2.0 method.
+  # Set the OAuth2 client id and secret. Register your application here to
+  # obtain these values:
+  #   https://code.google.com/apis/console#access
+  #:oauth2_client_id: INSERT_OAUTH2_CLIENT_ID_HERE
+  #:oauth2_client_secret: INSERT_OAUTH2_CLIENT_SECRET_HERE
+  # Optional, see: https://developers.google.com/accounts/docs/OAuth2WebServer
+  #:oauth2_callback: INSERT_OAUTH2_CALLBACK_URL_HERE
+  #:oauth2_state: INSERT_OAUTH2_STATE_HERE
+  #:oauth2_access_type: INSERT_OAUTH2_ACCESS_TYPE_HERE
+  #:oauth2_approval_prompt: INSERT_OAUTH2_APPROVAL_PROMPT_HERE
+
+  # Auth parameters for OAuth1.0a method.
+  # NOTE: OAuth1.0a method is deprecated, use OAuth2.0 instead.
   # Set the OAuth consumer key and secret. Anonymous values can be used for
   # testing, and real values can be obtained by registering your application:
   # https://developers.google.com/accounts/docs/RegistrationForWebAppsAuto
